Fixed stack overflow and stack exchange buttons

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ p.mainContent{
 .stackobtn {
         border-color: rgb(244, 128, 36);
         border-radius: 10px;
-        width: 240px;
+        width: 300px;
         height: 45px;
         font-size: xx-large;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -185,7 +185,7 @@ p.mainContent{
 .stackxbtn {
         border-color: rgb(25, 83, 152);
         border-radius: 10px;
-        width: 240px;
+        width: 300px;
         height: 45px;
         font-size: xx-large;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
